--- a/express-dev-skills/views/index.ejs
+++ b/express-dev-skills/views/index.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <p> Check out my <a href='/dev-skills'> cool Dev Skills</a>!</p>
   </body>
 </html>
