Add ability to go back a page

--- a/express-dev-skills/views/dev-skills/index.ejs
+++ b/express-dev-skills/views/dev-skills/index.ejs
@@ -34,7 +34,8 @@
         </li>
       <% }); %>
     </ul>
-    <a href="/dev-skills/new">Add new Skills</a>
+    <p> <a href="/dev-skills/new">Add new Skills</a> </p>
+    <p> <a href='/'> Back to Home Page</a> </p>
   </body>
 
 </html>
