--- a/express-dev-skills/views/dev-skills/new.ejs
+++ b/express-dev-skills/views/dev-skills/new.ejs
@@ -9,6 +9,7 @@
     <form action="/dev-skills" method="POST" autocomplete="off">
       <input type="text" name="skill">
       <button type="submit">Save Skill</button>
+       <p> <a href='/dev-skills'> Back to Dev Skill List</a> </p>
     </form>
   </body>
 
