--- a/express-dev-skills/views/dev-skills/show.ejs
+++ b/express-dev-skills/views/dev-skills/show.ejs
@@ -8,8 +8,9 @@
     <h3>Dev-Skill: <%= devSkills.skill %></h3>
     <h3>Skill Id: <%= devSkills.id %></h3>
     <h3>Complete: <%= devSkills.learn ? 'Yes' : 'No' %></h3>
-    
-    <a href='/dev-skills/<%= devSkills.id %>/edit'> Edit Dev Skill </a>
+
+    <p> <a href='/dev-skills/<%= devSkills.id %>/edit'> Edit Dev Skill </a> </p>
+    <a href='/dev-skills'> Back to Dev Skill List</a>
   </body>
 
 </html>
